--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "rareloop/lumberjack-core": "^5.0",
-    "symfony/error-handler": "^5.2"
+    "symfony/error-handler": "^5.2",
+    "symfony/mailer": "^5.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
