--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "habanatech/qbairbnb",
   "type": "project",
   "license": "MIT",
-  "description": "A tool for managing rent-houses and roms in Cuba. Based on Solidres and Wordpress using bedrock and lumberjack",
+  "description": "A tool for managing rent-houses and roms in Cuba.",
   "homepage": "https://roots.io/bedrock/",
   "authors": [
     {
@@ -12,7 +12,7 @@
     }
   ],
   "keywords": [
-    "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
+    "tourism", "rental properties","bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
   ],
   "support": {
     "issues": "https://github.com/roots/bedrock/issues",
@@ -26,7 +26,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.4",
     "composer/installers": "^1.10",
     "vlucas/phpdotenv": "^5.3",
     "oscarotero/env": "^2.1",
