--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-minimal
-logo: https://habana-tech.github.io/qbairbnb/img/logo.svg
+logo: https://raw.githubusercontent.com/habana-tech/qbairbnb/main/docs/img/logo.svg
