--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "rareloop/lumberjack-core": "^5.0",
     "symfony/error-handler": "^5.2",
-    "symfony/mailer": "^5.2"
+    "symfony/mailer": "^5.2",
+    "twig/extra-bundle": "^3.3",
+    "twig/cssinliner-extra": "^3.3",
+    "symfony/webpack-encore-bundle": "^1.11"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
